--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -1,8 +1,30 @@
-<h2>Login</h2>
-<form method="POST">
+{% extends 'base/main.html' %}
+{% block title %}Log In{% endblock %}
+{% block content %}
+
+<h2 class="self-center text-2xl mb-6 mt-4">
+    <i class="fa-solid fa-user"></i>
+    Login
+</h2>
+<form method="POST" class="flex flex-col items-center p-5">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type='submit' value="Login" /> 
+    {% if form.errors %}
+      {% for error in form.non_field_errors %}
+       <div class="bg-red-300 text-center py-2 px-10 rounded-xl mb-4"> {{ error }} </div>
+      {% endfor %}
+    {% endif %}
+    
+    <div class="w-full flex justify-center items-center my-2">
+        <label class="bold mr-6">Username :</label>
+        <input type="{{ form.username.field.widget.input_type }}" name="{{ form.username.html_name }}" id="{{ form.username.auto_id }}" class="pl-4 py-2 rounded-xl border w-1/2">
+    </div>
+    <div class="w-full flex justify-center items-center my-2">
+        <label class="bold mr-6">Password :</label>
+        <input type="{{ form.password.field.widget.input_type }}" name="{{ form.password.html_name }}" id="{{ form.password.auto_id }}" class="pl-4 py-2 rounded-xl border w-1/2">
+    </div>
+    <input type='submit' value="Log In" class="bg-green-300 my-6 cursor-pointer px-6 py-3 ml-14 rounded-xl hover:bg-green-500 hover:text-white" /> 
 </form>
 
-<p>Dont have an account ? <a href="{% url 'register' %}">Register</a> </p>
+<p class="my-4">Dont have an account ? <a href="{% url 'register' %}" class="text-lg font-bold underline">Register</a> </p>
+
+{% endblock %}
