--- a/base/templates/base/register.html
+++ b/base/templates/base/register.html
@@ -1,8 +1,74 @@
-<h2>Register</h2>
-<form method="POST">
+{% extends 'base/main.html' %}
+{% block title %}Register{% endblock %}
+{% block content %}
+
+
+<h2 class="self-center text-2xl mb-10 mt-4">
+    <i class="fa-solid fa-user"></i>
+    Register
+</h2>
+<form method="POST" class="self-center w-2/3 flex flex-col">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type='submit' value="Register" /> 
+    <div class="flex flex-col w-full">
+        <div class="flex flex-row justify-center items-center">
+            <label for="{{ form.username.id_for_label }}" class="w-36">Username : </label>
+            <input type="text"
+                name="{{ form.username.html_name }}"
+                id="{{ form.username.auto_id }}"
+                class="w-2/3 pl-4 py-2 my-2 border rounded-xl">
+        </div>
+        {% if form.username.help_text %}
+          <small class="text-sm self-center mb-6">{{ form.username.help_text }}</small>
+        {% endif %}
+        {% if form.username.errors %}
+          <ul class="list-disc self-center my-4">
+            {% for error in form.username.errors %}
+              <li>{{ error }}</li>
+            {% endfor %}
+          </ul>
+        {% endif %}
+    </div>
+      <div class="flex flex-col w-full">
+        <div class="flex flex-row items-center justify-center">
+            <label for="{{ form.password1.id_for_label }}" class="w-36">Password : </label>
+            <input type="password"
+                name="{{ form.password1.html_name }}"
+                id="{{ form.password1.auto_id }}"
+                class="w-2/3 pl-4 py-2 my-2 border rounded-xl">
+        </div>
+        {% if form.password1.help_text %}
+          <small class="text-sm self-center mb-6">{{ form.password1.help_text }}</small>
+        {% endif %}
+        {% if form.password1.errors %}
+          <ul class="list-disc  self-center my-4">
+            {% for error in form.password1.errors %}
+              <li>{{ error }}</li>
+            {% endfor %}
+          </ul>
+        {% endif %}
+      </div>
+      <div class="flex flex-col w-full">
+        <div class="flex flex-row items-center justify-center">
+            <label for="{{ form.password2.id_for_label }}" class="w-36">Confirm Password : </label>
+            <input type="password"
+                name="{{ form.password2.html_name }}"
+                id="{{ form.password2.auto_id }}"
+                class="w-2/3 pl-4 py-2 my-2 border rounded-xl">
+        </div>
+        {% if form.password2.help_text %}
+          <small class="text-sm self-center mb-6">{{ form.password2.help_text }}</small>
+        {% endif %}
+        {% if form.password2.errors %}
+          <ul class="list-disc  self-center my-4">
+            {% for error in form.password2.errors %}
+              <li>{{ error }}</li>
+            {% endfor %}
+          </ul>
+        {% endif %}
+      </div>
+    <input type='submit' value="Register" class="bg-green-300 self-end my-6 cursor-pointer px-6 py-3 ml-14 rounded-xl hover:bg-green-500 hover:text-white"/> 
 </form>
 
-<p>already have an account ? <a href="{% url 'login' %}">Login</a> </p>
+<p class="my-5">already have an account ? <a href="{% url 'login' %}" class="font-bold underline">Login</a> </p>
+
+{% endblock %}
