--- a/base/templates/base/task_delete.html
+++ b/base/templates/base/task_delete.html
@@ -1,8 +1,17 @@
-<a href="{% url 'tasks' %}">Go Back</a>
-<form method="POST">
+{% extends 'base/main.html' %}
+{% block title %}Delete Task{% endblock %}
+{% block content %}
+
+<a href="{% url 'tasks' %}" class="mb-6">
+    <i class="fa-solid fa-arrow-left"></i>
+    Go Back
+</a>
+<form method="POST" class="self-center flex flex-col">
     {% csrf_token %}
-    <p>
+    <p class="mb-6">
         Are you Sure you want to delete this Task ? "{{ task }}"
     </P>
-    <input type="submit" value="Yes" />
+    <input type="submit" value="Yes" class="bg-green-300 self-end px-3 py-2 cursor-pointer rounded-xl hover:bg-green-400 hover:text-white" />
 </form>
+
+{% endblock %}
