--- a/base/templates/base/task_form.html
+++ b/base/templates/base/task_form.html
@@ -1,7 +1,50 @@
-<h2>Task form </h2>
-<a href="{% url 'tasks' %}">Back</a>
-<form method="POST">
+{% extends 'base/main.html' %}
+{% block title %}New Task{% endblock %}
+{% block content %}
+<div class="flex justify-between">
+    <h2 class="text-2xl underline mb-8">Task form </h2>
+    <a href="{% url 'tasks' %}">
+        <i class="fa-solid fa-arrow-left"></i>
+        Back
+    </a>
+</div>
+<form method="POST" class="flex flex-col ">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type='submit'>Create</button>
+
+    {% if form.errors %}
+      {% for error in form.non_field_errors %}
+       <div class="bg-red-300 text-center py-2 rounded-xl mb-4"> {{ error }} </div>
+      {% endfor %}
+      {% for field in form %}
+        {% if field.errors|length > 0 %}
+            <ul class="list-disc bg-red-300 p-4 rounded-xl mb-4">
+                {{ field.name }} : 
+                {% for error in field.errors %}
+                    <li class="mb-1 ml-5 text-sm"> {{ error }} </li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+      {% endfor %}
+    {% endif %}
+
+    <div class="w-full flex justify-center items-center my-2">
+        <label class="bold w-20 mr-6">Title :</label>
+        <input type="{{ form.title.field.widget.input_type }}" name="{{ form.title.html_name }}" id="{{ form.title.auto_id }}" class="pl-4 py-2 rounded-xl border w-2/3" value="{% if task.title %} {{ form.title.initial  }} {% endif %}">
+    </div>
+    <div class="w-full flex justify-center items-center my-2">
+        <label class="bold w-22 mr-6">Description :</label>
+        <textarea rows="8" type="{{ form.description.field.widget.input_type }}" name="{{ form.description.html_name }}" id="{{ form.description.auto_id }}" class="pl-4 py-2 resize-none rounded-xl border w-2/3">{% if task.description %}{{ form.description.initial  }}{% endif %}</textarea>
+    </div>
+    <div class="flex justify-center items-center my-2">
+        <label class="bold mr-6">Completed :</label>
+        <input type="checkbox" name="{{ form.complete.html_name }}" id="{{ form.complete.auto_id }}" class="pl-4 py-2 h-5 w-5 rounded-xl border" {% if form.complete.initial %}checked{% endif %}>
+    </div>
+    <button type='submit'  class="bg-green-300 my-6 self-center cursor-pointer px-6 py-3 ml-14 rounded-xl hover:bg-green-500 hover:text-white">
+        {% if update %}
+            save 
+        {% else %}
+            Create
+        {% endif %}
+    </button>
 </form>
+{% endblock %}
